# smtpc

./: .gitignore  Cargo.toml  LICENSE.MD  README.MD
examples/: parse_quoted_printable.rs  parse_simple.rs
src/: fuzz.rs  lib.rs
src/encoding/: base64.rs  mod.rs  multipart.rs  quoted_printable.rs  spaceless.rs
src/mail/: address.rs  date.rs  mod.rs
src/mail/header/: bag.rs  message_id.rs  mod.rs  raw_bag.rs  reader.rs  transfer_encoding.rs
src/smtp/: conn.rs  mod.rs
src/utils/: cc.rs  hex.rs  iter_ext.rs  mod.rs  text_stream.rs
src/utils/quoted/: mod.rs  quoted.rs  rfc_2047.rs
