[package]
name = "smtpc"
version = "0.1.0"
authors = ["teawithsand <teawithsand@gmail.com>"]
edition = "2018"
repository = "https://github.com/teawithsand/smtpc"

[features]
default = ["serialize"]
serialize = ["serde", "serde_derive"]

[dependencies]
derive_more = "0.15.0"
base64 = "0.10"
mime = "0.3"

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }