[package]
name = "smtpc"
version = "0.1.0"
authors = ["teawithsand <teawithsand@gmail.com>"]
edition = "2018"
license-file = "LICENSE.MD"
repository = "https://github.com/teawithsand/smtpc"
homepage = "https://github.com/teawithsand/smtpc"
readme = "README.MD"
keywords = ["email", "parser", "quoted-printable", "multipart", "base64"]
categories = ["email"]
description = "SMTPC simplifies process of parsing mail messages sent over SMTP"

[features]
default = ["serialize"]
serialize = ["serde", "serde_derive"]

[badges]
travis-ci = { repository = "teawithsand/smtpc", branch = "master" }

[dependencies]
derive_more = "0.15.0"
base64 = "0.10"
mime = "0.3"

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }